--- a/support.html
+++ b/support.html
@@ -5,10 +5,7 @@
 <link title="default" rel="stylesheet" type="text/css" href="wakaba.css">
 <link title="none" rel="stylesheet" type="text/css" href="none.css">
 <title>Wakaba Kendo Club - Importance of parent/guardian support</title>
-<script src="http://www.google-analytics.com/urchin.js" type="text/javascript"></script><script type="text/javascript">
-_uacct = "UA-3179089-1";
-urchinTracker();
-</script><script src="prototype.js" type="text/javascript"></script><script src="scriptaculous.js?load=effects,builder" type="text/javascript"></script><script src="lightbox.js" type="text/javascript"></script><script src="selector.js" type="text/javascript"></script><script type="text/javascript">
+<script src="prototype.js" type="text/javascript"></script><script src="scriptaculous.js?load=effects,builder" type="text/javascript"></script><script src="lightbox.js" type="text/javascript"></script><script src="selector.js" type="text/javascript"></script><script type="text/javascript">
 function alter(id) {
   var aels = $E(id + ' div.flickr_badge_image a');
   var iels = $E(id + ' div.flickr_badge_image img');
