--- a/equipment.html
+++ b/equipment.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<link href="http://fonts.googleapis.com/css?family=Lustria" rel="stylesheet" type="text/css">
+<link href="https://fonts.googleapis.com/css?family=Lustria" rel="stylesheet" type="text/css">
 <link title="default" rel="stylesheet" type="text/css" href="wakaba.css">
 <link title="none" rel="stylesheet" type="text/css" href="none.css">
 <title>Wakaba Kendo Club - Equipment Price</title>
@@ -23,7 +23,7 @@ function init() {
   alter('#flickr');
   alter('div.gallery');
 
-  if(typeof(initLightbox) === "undefined"){ initLightbox(); /* reinitialize for firefox */ }
+  if(typeof(initLightbox) != "undefined"){ initLightbox(); /* reinitialize for firefox */ }
 }
 
 Event.observe(window, 'load', init, false);
