--- a/index.html
+++ b/index.html
@@ -86,10 +86,7 @@ to use contact appropriately.</li>
 </div>
 
 <div class="video">
-<object width="445" height="364"><param name="movie" value="http://www.youtube.com/v/H10IznPGSn0&amp;hl=en&amp;fs=1&amp;rel=0&amp;border=1">
-<param name="allowFullScreen" value="true">
-<param name="allowscriptaccess" value="always">
-<embed src="http://www.youtube.com/v/H10IznPGSn0&amp;hl=en&amp;fs=1&amp;rel=0&amp;border=1" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="445" height="364"></embed></object><p>Video of children practicing kendo in Japan.</p>
+<iframe width="445" height="364" src="https://www.youtube.com/embed/H10IznPGSn0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="true"></iframe><p>Video of children practicing kendo in Japan.</p>
 </div>
 
 
