--- a/vid.html
+++ b/vid.html
@@ -38,28 +38,16 @@ Event.observe(window, 'load', init, false);
 <div id="content">
 <h1>Video</h1>
 <div class="video">
-<object width="445" height="364"><param name="movie" value="http://www.youtube.com/v/5DzI63ApNJs&amp;hl=en&amp;fs=1&amp;rel=0&amp;border=1">
-<param name="allowFullScreen" value="true">
-<param name="allowscriptaccess" value="always">
-<embed src="http://www.youtube.com/v/5DzI63ApNJs&amp;hl=en&amp;fs=1&amp;rel=0&amp;border=1" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="445" height="364"></embed></object><p>How to put on Hakama</p>
+<iframe width="445" height="364" src="https://www.youtube.com/embed/5DzI63ApNJs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="true"></iframe><p>How to put on Hakama</p>
 </div>
 <div class="video">
-<object width="445" height="364"><param name="movie" value="http://www.youtube.com/v/EVN57Y4awrw&amp;hl=en&amp;fs=1&amp;rel=0&amp;border=1">
-<param name="allowFullScreen" value="true">
-<param name="allowscriptaccess" value="always">
-<embed src="http://www.youtube.com/v/EVN57Y4awrw&amp;hl=en&amp;fs=1&amp;rel=0&amp;border=1" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="445" height="364"></embed></object><p>How fold your Hakama</p>
+<iframe width="445" height="364" src="https://www.youtube.com/embed/EVN57Y4awrw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="true"></iframe><p>How fold your Hakama</p>
 </div>
 <div class="video">
-<object width="445" height="364"><param name="movie" value="http://www.youtube.com/v/H10IznPGSn0&amp;hl=en&amp;fs=1&amp;rel=0&amp;border=1">
-<param name="allowFullScreen" value="true">
-<param name="allowscriptaccess" value="always">
-<embed src="http://www.youtube.com/v/H10IznPGSn0&amp;hl=en&amp;fs=1&amp;rel=0&amp;border=1" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="445" height="364"></embed></object><p>Video of children practicing kendo in Japan</p>
+<iframe width="445" height="364" src="https://www.youtube.com/embed/H10IznPGSn0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="true"></iframe><p>Video of children practicing kendo in Japan</p>
 </div>
 <div class="video">
-<object width="445" height="364"><param name="movie" value="http://www.youtube.com/v/KVzHMNJ6NKg&amp;hl=en&amp;fs=1&amp;rel=0&amp;border=1">
-<param name="allowFullScreen" value="true">
-<param name="allowscriptaccess" value="always">
-<embed src="http://www.youtube.com/v/KVzHMNJ6NKg&amp;hl=en&amp;fs=1&amp;rel=0&amp;border=1" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="445" height="364"></embed></object><p>Kihon Keiko Ho</p>
+<iframe width="445" height="364" src="https://www.youtube.com/embed/KVzHMNJ6NKg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="true"></iframe><p>Kihon Keiko Ho</p>
 </div>
 
 
