--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ Event.observe(window, 'load', init, false);
 </script>
 </head>
 <body><div id="panel">
-<div id="flickr"><script type="text/javascript" src="http://www.flickr.com/badge_code_v2.gne?count=8&amp;display=random&amp;size=s&amp;layout=x&amp;context=in%2Fpool-wakaba%2F&amp;source=group&amp;group=537843%40N25"></script></div>
+<div id="flickr"><script type="text/javascript" src="https://www.flickr.com/badge_code_v2.gne?count=8&amp;display=random&amp;size=s&amp;layout=x&amp;context=in%2Fpool-wakaba%2F&amp;source=group&amp;group=537843%40N25"></script></div>
 <div id="banner"></div>
 <div id="logo"></div>
 <div id="page">
